# countries

./: .gitignore  .gvit.toml  README.md  countries.py  database_connection.py  decorators.py  pyproject.toml  requirements.txt
config/: config.py  secrets_template.py
data/: countries.json
